k8s/paymentservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: paymentservice
    labels:
        app: paymentservice
spec:
    replicas: 1
    selector:
        matchLabels:
            app: paymentservice
    template:
        metadata:
            labels:
                app: paymentservice
        spec:
            containers:
                - name: paymentservice
                  image: paymentservice:latest
                  imagePullPolicy: Never
                  ports:
                    - containerPort: 8080
