k8s/subscriptionservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: subscriptionservice
    labels:
        app: paymentservice
spec:
    replicas: 1
    selector:
        matchLabels:
            app: subscriptionservice
    template:
        metadata:
            labels:
                app: subscriptionservice
        spec:
            containers:
                - name: subscriptionservice
                  image: subscriptionservice:latest
                  imagePullPolicy: Never
                  ports:
                    - containerPort: 8080
