k8s/tokenservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tokenservice
  namespace: paymentsystem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tokenservice
  template:
    metadata:
      labels:
        app: tokenservice
    spec:
      containers:
        - name: tokenservice
          image: tokenservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
