k8s/transactionlogservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactionlogservice
  namespace: paymentsystem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactionlogservice
  template:
    metadata:
      labels:
        app: transactionlogservice
    spec:
      containers:
        - name: transactionlogservice
          image: transactionlogservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
