k8s/walletservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: walletservice
  namespace: paymentsystem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: walletservice
  template:
    metadata:
      labels:
        app: walletservice
    spec:
      containers:
        - name: walletservice
          image: walletservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
