k8s/paymentservice-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: paymentservice
    labels:
        app: paymentservice
spec:
    type: NodePort
    selector:
        app: paymentservice
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 8080
          nodePort: 30000
