k8s/subscriptionservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subscriptionservice
  namespace: paymentsystem
spec:
  type: NodePort
  selector:
    app: subscriptionservice
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30004
