k8s/tokenservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tokenservice
  namespace: paymentsystem
spec:
  type: NodePort
  selector:
    app: tokenservice
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
