k8s/transactionlogservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transactionlogservice
  namespace: paymentsystem
spec:
  type: NodePort
  selector:
    app: transactionlogservice
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30002
