k8s/walletservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: walletservice
  namespace: paymentsystem
spec:
  type: NodePort
  selector:
    app: walletservice
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30003
