k8s/paymentservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paymentservice-ingress
  namespace: paymentsystem
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /payment(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: paymentservice
            port:
              number: 8080
